# RVC-Speakers

./: .gitattributes  .gitignore  Dockerfile  Dockerfile-work  README.md  config.py  edge_tts_vc_func.py  edge_tts合成-大文本.ipynb  edge_tts合成.ipynb  load_text.py  loop.py  multi_config.json  requirements.txt  server.kra  setup.py  start.py  util.py  vc_infer_pipeline.py  vits_tts合成-解说.ipynb  vits合成.ipynb  wav2wav.ipynb  未命名.ipynb  音频解析任务管理.ipynb
bark/: __init__.py  api.py  mode_load.py
deploy/: docker-compose.yml
notebook/: bark2wav.ipynb  bark合成.ipynb  edge合成.ipynb  vits合成.ipynb  wav2wav.ipynb  whisper_ general_purpose_speech.ipynb  音频解析任务管理-bark.ipynb  音频解析任务管理-edge.ipynb  音频解析任务管理.ipynb
rvc/: __init__.py  rvc.yaml  (+2 more)
src/: pyproject.toml  workspace.toml
src/bases/speakers/server/: server_init.py  utils.py
src/bases/speakers/server/bootstrap/: base.py  bootstrap_register.py
src/bases/speakers/server/servlet/: __init__.py  runner.py
src/bases/speakers/server/static/: index.html
src/bases/speakers/server/static/static/css/: app.bbfea95c.css
src/bases/speakers/server/static/static/js/: chunk-10793486.c29b1169.js  chunk-libs.abaf6167.js
src/bases/speakers/start/: __init__.py  core.py  main.py  start.py
src/components/speakers/TransNetV2/: __init__.py  model_load.py
src/components/speakers/TransNetV2/modules/: __init__.py
src/components/speakers/bark/: mode_load.py
src/components/speakers/common/: general.py  utils.py
src/components/speakers/processors/: __init__.py  bark_to_voice.py  bert_vits2_to_voice.py  edge_to_voice.py  rvc_speakers_processor.py  vits_to_voice.py
src/components/speakers/rvc/: rvc.yaml  vc_infer_pipeline.py
src/components/speakers/rvc/infer_pack/: attentions.py  models.py  models_onnx.py  models_onnx_moess.py  modules.py
src/components/speakers/rvc/infer_pack/modules/: __init__.py
src/components/speakers/rvc/lib/: rmvpe.py
src/components/speakers/rvc/model/arianagrande/: config.json
src/components/speakers/rvc/model/bob/: config.json
src/components/speakers/rvc/model/lulu/: config.json
src/components/speakers/rvc/model/maomao/: config.json
src/components/speakers/rvc/model/nahida/: config.json
src/components/speakers/rvc/model/yiqing/: config.json
src/components/speakers/tasks/: bark_voice_task.py  vits_voice_task.py
src/components/speakers/vits/: models.py  models_v2.py
src/components/speakers/vits/modules/: __init__.py
src/components/speakers/vits/modules/attentions/: __init__.py  attentions.py  attentions_v2.py
src/components/speakers/vits/modules/commons/: __init__.py
src/components/speakers/vits/modules/layer/: __init__.py  modules.py  modules_v2.py
src/components/speakers/vits/modules/transforms/: __init__.py
src/components/speakers/vits/monotonic_align/: __init__.py  install.txt
src/components/speakers/vits/text/: __init__.py  cleaners.py
src/projects/speakers/: pyproject.toml  speakers.yaml
src/projects/speakers/RVC-Speakers-hub/rvc/: rvc.yaml
src/test/bases/speakers/server/: test_core.py
src/test/bases/speakers/start/: test_core.py
src/test/components/speakers/TransNetV2/: test_core.py
src/test/components/speakers/bark/: test_core.py
src/test/components/speakers/common/: test_core.py
src/test/components/speakers/load/: test_core.py
src/test/components/speakers/my_example_component/: test_core.py
src/test/components/speakers/processors/: test_core.py
src/test/components/speakers/rvc/: test_core.py
src/test/components/speakers/tasks/: test_core.py
src/test/components/speakers/vits/: test_core.py
(+67 files in other folders)
