[tool.poetry]
name = "speakers"
version = "0.1.0"
description = "分发任务构建框架"
authors = ["glide-the <2533736852@qq.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [
    {include = "speakers/server",from = "bases"},
    {include = "speakers/start",from = "bases"},
    {include = "speakers/processors",from = "components"},
    {include = "speakers/my_example_component",from = "components"},
    {include = "speakers/bark",from = "components"},
    {include = "speakers/rvc",from = "components"},
    {include = "speakers/common",from = "components"},
    {include = "speakers/load",from = "components"},
    {include = "speakers/tasks",from = "components"},
    {include = "speakers/TransNetV2",from = "components"},
    {include = "speakers/vits",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.10"

# Cython
Cython = "0.29.21"

# vits_text
unidecode = "*"

# pre uninstall cmake
pyopenjtalk = "0.3.1"
jamo = "0.4.1"
pypinyin = "0.49.0"
jieba = "0.42.1"
cn2an = "0.5.21"

# vits_text
nest-asyncio = "1.5.6"
gradio = "3.33.1"
fairseq = "0.12.2"
torch = "2.0.1"
torchaudio = "2.0.2"
soundfile = "0.12.1"
scipy = "1.9.3"
librosa = "0.9.1"
musicdl = "2.3.6"
pyaudio = "*"
torchcrepe = "0.0.20"
praat-parselmouth = "0.4.3"
pyworld = "0.3.2"
faiss-cpu = "1.7.3"
numpy = "1.23.5"
nltk = "3.8.1"

edge-tts = "6.1.7"
IPython = "8.12.2"
tqdm = "4.66.1"
pandas = "2.0.3"

## bark
transformers = "4.31.0"
encodec = "0.1.1"
huggingface-hub = "0.16.4"
funcy = "2.0"

# config manage
omegaconf = "2.0.6"
pydantic = "1.10.12"

# log
colorama = "0.4.6"

# server
fastapi = "~=0.99.1"
starlette = "~=0.27.0"
uvicorn = "~=0.23.1"
requests = "2.31.0"

# 将https://github.com/wbond/oscrypto/archive/d5f3437ed24257895ae1edd9e503cfb352e635a8.zip"加入到依赖中

oscrypto = {url = "https://github.com/wbond/oscrypto/archive/d5f3437ed24257895ae1edd9e503cfb352e635a8.zip"}


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
isort = "^5.12.0"
pytest = "^7.4.3"
black = "^23.11.0"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
