[tool.poetry]
name = "speakers"
version = "0.1.0"
description = ""
authors = ['glide-the <2533736852@qq.com>']
license = ""

packages = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
