[tool.poetry]
name = "speakers"
version = "0.1.0"
description = ""
authors = ['glide-the <2533736852@qq.com>']
license = ""

packages = [
    {include = "speakers/server",from = "../../bases"},
    {include = "speakers/start",from = "../../bases"},
    {include = "speakers/processors",from = "../../components"},
    {include = "speakers/bark",from = "../../components"},
    {include = "speakers/rvc",from = "../../components"},
    {include = "speakers/common",from = "../../components"},
    {include = "speakers/load",from = "../../components"},
    {include = "speakers/tasks",from = "../../components"},
    {include = "speakers/TransNetV2",from = "../../components"},
    {include = "speakers/vits",from = "../../components"},
]
include = [
    {path = "speakers.yaml"},
]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
